--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,14 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "types": ["nativewind/types"],
     "paths": {
       "@/*": [
         "./*"
       ]
     }
   },
+
   "include": [
     "**/*.ts",
     "**/*.tsx",
