--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
     "expo-font": "~12.0.8",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
@@ -40,8 +41,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0",
-    "expo-linear-gradient": "~13.0.2"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -52,6 +52,7 @@
     "babel-plugin-inline-dotenv": "^1.7.0",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.2",
