--- a/app.json
+++ b/app.json
@@ -24,6 +24,7 @@
     },
     "web": {
       "bundler": "metro",
+      "output": "server",
 
       "favicon": "./assets/images/favicon.png"
     },
