--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.17",
@@ -44,8 +45,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0",
-    "@expo/metro-runtime": "~3.2.1"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -54,8 +54,11 @@
     "@types/react": "~18.2.45",
     "@types/react-test-renderer": "^18.0.7",
     "babel-plugin-inline-dotenv": "^1.7.0",
+    "compression": "^1.7.4",
+    "express": "^4.19.2",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "morgan": "^1.10.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.2.0",
