--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "expo-updates": "~0.25.20"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
