--- a/app.json
+++ b/app.json
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nnagelia.headstarterProject"
+      "bundleIdentifier": "com.nnagelia.headstarterProject",
+      "config": {
+        "googleMapsApiKey": "AIzaSyAPWmKvpyjbPAdWK3nyxruJsB4WgQd8kXs"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -28,9 +31,7 @@
       "output": "server",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router"
-    ],
+    "plugins": ["expo-router"],
     "experiments": {
       "typedRoutes": true
     },
