--- a/app.json
+++ b/app.json
@@ -29,9 +29,20 @@
     "web": {
       "bundler": "metro",
       "output": "server",
-      "favicon": "./assets/images/favicon.png"
+      "favicon": "./assets/images/favicon.png",
+      "config": {
+        "apiKey": "AIzaSyAPWmKvpyjbPAdWK3nyxruJsB4WgQd8kXs"
+      }
     },
-    "plugins": ["expo-router"],
+    "plugins": [
+      "expo-router",
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
     "experiments": {
       "typedRoutes": true
     },
