--- a/app.json
+++ b/app.json
@@ -14,10 +14,7 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.nnagelia.headstarterProject",
-      "config": {
-        "googleMapsApiKey": "AIzaSyAPWmKvpyjbPAdWK3nyxruJsB4WgQd8kXs"
-      }
+      "bundleIdentifier": "com.nnagelia.headstarterProject"
     },
     "android": {
       "adaptiveIcon": {
@@ -29,10 +26,7 @@
     "web": {
       "bundler": "metro",
       "output": "server",
-      "favicon": "./assets/images/favicon.png",
-      "config": {
-        "apiKey": "AIzaSyAPWmKvpyjbPAdWK3nyxruJsB4WgQd8kXs"
-      }
+      "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
       "expo-router",
