--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
+    "@teovilla/react-native-web-maps": "^0.9.5",
     "dotenv": "^16.4.5",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
@@ -34,21 +35,24 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "leaflet": "^1.9.4",
+    "mapkit-react": "^1.15.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-native": "0.74.3",
     "react-native-appwrite": "^0.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0",
-    "react-native-maps": "1.14.0"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
