Preferences quiz page and logic

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@expo/server": "^0.4.4",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "dotenv": "^16.4.5",
