--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.20",
     "expo-web-browser": "~13.0.3",
     "leaflet": "^1.9.4",
     "mapkit-react": "^1.15.2",
@@ -46,7 +47,6 @@
     "react-native-appwrite": "^0.4.0",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-maps": "1.14.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
@@ -54,7 +54,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "tailwind-rn": "^4.2.0",
-    "expo-updates": "~0.25.20"
+    "react-native-maps": "1.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
