--- a/app.json
+++ b/app.json
@@ -61,6 +61,7 @@
       "policy": "appVersion"
     },
     "updates": {
+      "enabled": true,
       "url": "https://u.expo.dev/e5f4bd15-a415-4228-b70a-6b8102131881"
     }
   }
