--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
     "expo-dev-client": "~4.0.20",
+    "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.8",
+    "expo-image-picker": "~15.0.7",
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
@@ -54,9 +56,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0",
-    "expo-image-picker": "~15.0.7",
-    "expo-file-system": "~17.0.1"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
