--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
     "@teovilla/react-native-web-maps": "^0.9.5",
+    "axios": "^1.7.2",
     "dotenv": "^16.4.5",
     "expo": "~51.0.20",
     "expo-constants": "~16.0.2",
