--- a/eas.json
+++ b/eas.json
@@ -13,7 +13,10 @@
     },
     "preview": {
       "distribution": "internal",
-      "channel": "preview"
+      "channel": "preview",
+      "ios": {
+        "distribution": "internal"
+      }
     },
     "production": {
       "channel": "production"
