--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "expo-image": "~1.12.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
