--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-svg": "^15.4.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
+    "socket.io-client": "^4.7.5",
     "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
