--- a/app.json
+++ b/app.json
@@ -46,6 +46,14 @@
           "photosPermission": "The app accesses your photos to let you share them with your friends."
         }
       ],
+      [
+        "expo-notifications",
+        {
+          "icon": "./local/path/to/your/notification-icon.png",
+          "color": "#ffffff",
+          "sounds": ["./local/path/to/your/notification-sound.wav"]
+        }
+      ],
       "expo-font"
     ],
     "experiments": {
