--- a/package.json
+++ b/package.json
@@ -61,7 +61,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "socket.io-client": "^4.7.5",
-    "tailwind-rn": "^4.2.0"
+    "tailwind-rn": "^4.2.0",
+    "expo-notifications": "~0.28.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
