--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "expo-linear-gradient": "~13.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "~17.0.1",
+    "expo-notifications": "~0.28.14",
     "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
@@ -62,7 +63,7 @@
     "react-native-web": "~0.19.10",
     "socket.io-client": "^4.7.5",
     "tailwind-rn": "^4.2.0",
-    "expo-notifications": "~0.28.14"
+    "expo-device": "~6.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
