--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
     "leaflet": "^1.9.4",
     "loadash": "^1.0.0",
     "mapkit-react": "^1.15.2",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.5.45",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
