--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-icons": "^5.2.1",
     "react-native": "0.74.3",
     "react-native-appwrite": "^0.4.0",
+    "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
