--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^4.6.3",
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/datetimepicker": "8.0.1",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.4.0",
@@ -68,7 +69,7 @@
     "react-native-web": "~0.19.10",
     "socket.io-client": "^4.7.5",
     "tailwind-rn": "^4.2.0",
-    "@react-native-community/datetimepicker": "8.0.1"
+    "expo-tracking-transparency": "~4.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
