--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-tracking-transparency": "~4.0.2",
     "expo-updates": "~0.25.20",
     "expo-web-browser": "~13.0.3",
     "leaflet": "^1.9.4",
@@ -61,6 +62,7 @@
     "react-native-linear-gradient": "^2.8.3",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-maps": "1.14.0",
+    "react-native-purchases": "^8.0.1",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
@@ -68,8 +70,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.10",
     "socket.io-client": "^4.7.5",
-    "tailwind-rn": "^4.2.0",
-    "expo-tracking-transparency": "~4.0.2"
+    "tailwind-rn": "^4.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
