--- a/eas.json
+++ b/eas.json
@@ -12,7 +12,10 @@
       "android": {
         "buildType": "apk"
       },
-      "channel": "development"
+      "channel": "development",
+      "env": {
+        "EXPO_PUBLIC_RC_APPLE": "{{ secrets.EXPO_PUBLIC_RC_APPLE }}"
+      }
     },
     "development-device": {
       "developmentClient": true,
@@ -20,17 +23,26 @@
       "ios": {
         "simulator": false
       },
-      "channel": "development"
+      "channel": "development",
+      "env": {
+        "EXPO_PUBLIC_RC_APPLE": "{{ secrets.EXPO_PUBLIC_RC_APPLE }}"
+      }
     },
     "preview": {
       "distribution": "internal",
       "channel": "preview",
       "ios": {
         "distribution": "internal"
+      },
+      "env": {
+        "EXPO_PUBLIC_RC_APPLE": "{{ secrets.EXPO_PUBLIC_RC_APPLE }}"
       }
     },
     "production": {
-      "channel": "production"
+      "channel": "production",
+      "env": {
+        "EXPO_PUBLIC_RC_APPLE": "{{ secrets.EXPO_PUBLIC_RC_APPLE }}"
+      }
     }
   },
   "submit": {
